initial commit on branch

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React Quantum",
+  "name": "React-Quantum",
   "version": "1.0.0",
   "description": "react timer devtool",
   "main": "devtools.js",
