fibernode sent to contentpage

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-d3-tree": "^1.12.2",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "require": "^2.4.20"
   }
 }
